Finish random forest prediction

--- a/script-with-ids.ipynb
+++ b/script-with-ids.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load and clean data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -265,7 +272,8 @@
    "source": [
     "# Predict\n",
     "\n",
-    "predictions = rf.predict(test_features)"
+    "predictions = rf.predict(test_features)\n",
+    "predictions = pd.DataFrame(predictions)"
    ]
   },
   {
@@ -293,6 +301,19 @@
     "# Check mean absolute prediction error\n",
     "\n",
     "np.mean(np.abs(predictions - test_labels), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Append predictions to test data\n",
+    "predicted_cols = [c + \"_pred\" for c in train_labels.columns]\n",
+    "predictions_df = pd.DataFrame(predictions, columns = predicted_cols, index = test_features.index)\n",
+    "\n",
+    "test_data_with_preds = test_features.join(predictions_df)"
    ]
   },
   {
