More work on random forest

--- a/project.ipynb
+++ b/project.ipynb
@@ -9,16 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['data/LoanStats_2016Q3.csv', 'data/LoanStats_2016Q2.csv', 'data/LoanStats_2016Q1.csv', 'data/LoanStats_2016Q4.csv', 'data/LoanStats3d.csv', 'data/LoanStats_2017Q1.csv', 'data/LoanStats_2017Q3.csv', 'data/LoanStats_2017Q2.csv', 'data/LoanStats3b.csv', 'data/LoanStats3c.csv', 'data/LoanStats3a.csv', 'data/LoanStats_2017Q4.csv']\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -71,11 +64,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Change interest rate to float\n",
-    "frame['int_rate'] = frame['int_rate'].str.rstrip('%').astype('float') / 100.0\n",
+    "frame['int_rate_num'] = frame['int_rate'].str.rstrip('%').astype('float') / 100.0\n",
     "\n",
     "# Cast emp_length to int\n",
     "def emp_length_to_int(s):\n",
@@ -151,12 +146,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'member_id', 'loan_amnt', 'funded_amnt', 'funded_amnt_inv',\n",
+       "       'term', 'int_rate', 'installment', 'grade', 'sub_grade',\n",
+       "       ...\n",
+       "       'hardship_payoff_balance_amount', 'hardship_last_payment_amount',\n",
+       "       'disbursement_method', 'debt_settlement_flag',\n",
+       "       'debt_settlement_flag_date', 'settlement_status', 'settlement_date',\n",
+       "       'settlement_amount', 'settlement_percentage', 'settlement_term'],\n",
+       "      dtype='object', length=145)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
