More regression work

--- a/script-with-ids.ipynb
+++ b/script-with-ids.ipynb
@@ -34,6 +34,26 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(887379, 74)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -131,11 +151,11 @@
        "           max_features='auto', max_leaf_nodes=None,\n",
        "           min_impurity_split=1e-07, min_samples_leaf=1,\n",
        "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "           n_estimators=50, n_jobs=1, oob_score=False, random_state=42,\n",
+       "           n_estimators=64, n_jobs=1, oob_score=False, random_state=42,\n",
        "           verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,13 +178,13 @@
     "\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "rf = RandomForestRegressor(n_estimators = 20, random_state = 42)\n",
+    "rf = RandomForestRegressor(n_estimators = 64, random_state = 42)\n",
     "rf.fit(train_features, train_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -194,43 +214,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>dti</th>\n",
-       "      <td>0.122996</td>\n",
+       "      <td>0.123189</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>loan_amnt</th>\n",
-       "      <td>0.118713</td>\n",
+       "      <td>0.118567</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>revol_bal</th>\n",
-       "      <td>0.110505</td>\n",
+       "      <td>0.110298</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>earliest_cr_line_date</th>\n",
-       "      <td>0.101277</td>\n",
+       "      <td>0.100971</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>annual_inc</th>\n",
-       "      <td>0.091214</td>\n",
+       "      <td>0.091306</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>total_acc</th>\n",
-       "      <td>0.075174</td>\n",
+       "      <td>0.075287</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>open_acc</th>\n",
-       "      <td>0.061035</td>\n",
+       "      <td>0.061161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>emp_length_num</th>\n",
-       "      <td>0.042507</td>\n",
+       "      <td>0.042546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>inq_last_6mths</th>\n",
-       "      <td>0.029105</td>\n",
+       "      <td>0.029077</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>delinq_2yrs</th>\n",
-       "      <td>0.017839</td>\n",
+       "      <td>0.017829</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -238,19 +258,19 @@
       ],
       "text/plain": [
        "                       importance\n",
-       "dti                      0.122996\n",
-       "loan_amnt                0.118713\n",
-       "revol_bal                0.110505\n",
-       "earliest_cr_line_date    0.101277\n",
-       "annual_inc               0.091214\n",
-       "total_acc                0.075174\n",
-       "open_acc                 0.061035\n",
-       "emp_length_num           0.042507\n",
-       "inq_last_6mths           0.029105\n",
-       "delinq_2yrs              0.017839"
+       "dti                      0.123189\n",
+       "loan_amnt                0.118567\n",
+       "revol_bal                0.110298\n",
+       "earliest_cr_line_date    0.100971\n",
+       "annual_inc               0.091306\n",
+       "total_acc                0.075287\n",
+       "open_acc                 0.061161\n",
+       "emp_length_num           0.042546\n",
+       "inq_last_6mths           0.029077\n",
+       "delinq_2yrs              0.017829"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,47 +286,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Predict\n",
-    "\n",
-    "predictions = rf.predict(test_features)\n",
-    "predictions = pd.DataFrame(predictions)"
+    "# Predict out of sample with random forest\n",
+    "predictions = rf.predict(test_features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Getted fitted values (predictions in sample)\n",
+    "fitted_vals = rf.predict(train_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "late_16_30            0.006152\n",
-       "late_31_120           0.029241\n",
-       "default               0.003137\n",
-       "int_to_total          0.115799\n",
-       "late_fees_to_total    0.000167\n",
+       "late_16_30            0.020328\n",
+       "late_31_120           0.044456\n",
+       "default               0.014521\n",
+       "int_to_total          0.054906\n",
+       "late_fees_to_total    0.000972\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check mean absolute prediction error\n",
-    "\n",
-    "np.mean(np.abs(predictions - test_labels), axis=0)"
+    "# Check in sample performance\n",
+    "np.sqrt(np.mean((fitted_vals - train_labels) ** 2, axis=0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 116,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "late_16_30            0.052858\n",
+       "late_31_120           0.116974\n",
+       "default               0.038159\n",
+       "int_to_total          0.145281\n",
+       "late_fees_to_total    0.002458\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check mean squared error out of sample\n",
+    "np.sqrt(np.mean((predictions - test_labels) ** 2, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "late_16_30            0.052331\n",
+       "late_31_120           0.114582\n",
+       "default               0.036851\n",
+       "int_to_total          0.314678\n",
+       "late_fees_to_total    0.002751\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mean squared error of naive estimator that guesses 0 for everything\n",
+    "np.sqrt(np.mean(train_labels ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Append predictions to test data\n",
@@ -317,23 +402,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic regression model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0013737084154572059"
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.mean(frame.default)"
+    "## Logistic regression of default (and other risks) on pre-application characteristics\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "lr = LogisticRegression()\n",
+    "lr.fit(train_features, train_labels.default)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.036900647586326128"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(np.mean((lr.predict_proba(train_features)[:,1] - train_labels.default) ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.00605395,  0.00118431,  0.00117701, ...,  0.00053972,\n",
+       "        0.00277197,  0.00227416])"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr.predict_proba(train_features)[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loan_amnt                                     6000.000000\n",
+       "annual_inc                                   19328.000000\n",
+       "dti                                             34.220000\n",
+       "delinq_2yrs                                      0.000000\n",
+       "inq_last_6mths                                   0.000000\n",
+       "open_acc                                         4.000000\n",
+       "pub_rec                                          0.000000\n",
+       "revol_bal                                    18626.000000\n",
+       "total_acc                                        8.000000\n",
+       "recoveries                                       0.000000\n",
+       "policy_code                                      1.000000\n",
+       "emp_length_num                                   0.000000\n",
+       "earliest_cr_line_date                          120.018892\n",
+       "home_ownership_ANY                               0.000000\n",
+       "home_ownership_MORTGAGE                          0.000000\n",
+       "home_ownership_NONE                              0.000000\n",
+       "home_ownership_OTHER                             0.000000\n",
+       "home_ownership_OWN                               0.000000\n",
+       "home_ownership_RENT                              1.000000\n",
+       "verification_status_Not Verified                 0.000000\n",
+       "verification_status_Source Verified              0.000000\n",
+       "verification_status_Verified                     1.000000\n",
+       "addr_state_AK                                    0.000000\n",
+       "addr_state_AL                                    0.000000\n",
+       "addr_state_AR                                    0.000000\n",
+       "addr_state_AZ                                    0.000000\n",
+       "addr_state_CA                                    0.000000\n",
+       "addr_state_CO                                    0.000000\n",
+       "addr_state_CT                                    0.000000\n",
+       "addr_state_DC                                    0.000000\n",
+       "                                                 ...     \n",
+       "addr_state_MT                                    0.000000\n",
+       "addr_state_NC                                    0.000000\n",
+       "addr_state_ND                                    0.000000\n",
+       "addr_state_NE                                    0.000000\n",
+       "addr_state_NH                                    0.000000\n",
+       "addr_state_NJ                                    0.000000\n",
+       "addr_state_NM                                    0.000000\n",
+       "addr_state_NV                                    0.000000\n",
+       "addr_state_NY                                    0.000000\n",
+       "addr_state_OH                                    0.000000\n",
+       "addr_state_OK                                    1.000000\n",
+       "addr_state_OR                                    0.000000\n",
+       "addr_state_PA                                    0.000000\n",
+       "addr_state_RI                                    0.000000\n",
+       "addr_state_SC                                    0.000000\n",
+       "addr_state_SD                                    0.000000\n",
+       "addr_state_TN                                    0.000000\n",
+       "addr_state_TX                                    0.000000\n",
+       "addr_state_UT                                    0.000000\n",
+       "addr_state_VA                                    0.000000\n",
+       "addr_state_VT                                    0.000000\n",
+       "addr_state_WA                                    0.000000\n",
+       "addr_state_WI                                    0.000000\n",
+       "addr_state_WV                                    0.000000\n",
+       "addr_state_WY                                    0.000000\n",
+       "application_type_INDIVIDUAL                      1.000000\n",
+       "application_type_JOINT                           0.000000\n",
+       "verification_status_joint_Not Verified           0.000000\n",
+       "verification_status_joint_Source Verified        0.000000\n",
+       "verification_status_joint_Verified               0.000000\n",
+       "Name: 847014, Length: 78, dtype: float64"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_features.iloc[69742]"
    ]
   },
   {
