--- a/project.ipynb
+++ b/project.ipynb
@@ -2409,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 577,
+   "execution_count": 612,
    "metadata": {},
    "outputs": [
     {
@@ -2424,13 +2424,13 @@
        "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th>  <td>   0.254</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>1.307e+05</td> \n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>7.263e+04</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Date:</th>             <td>Thu, 26 Apr 2018</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>18:39:03</td>     <th>  Log-Likelihood:    </th> <td>-2.0937e+05</td>\n",
+       "  <th>Time:</th>                 <td>22:02:13</td>     <th>  Log-Likelihood:    </th> <td>-2.0937e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>766669</td>      <th>  AIC:               </th>  <td>4.187e+05</td> \n",
@@ -2442,21 +2442,21 @@
        "  <th>Df Model:</th>              <td>     2</td>      <th>                     </th>      <td> </td>     \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>      <td> </td>     \n",
+       "  <th>Covariance Type:</th>         <td>HC0</td>       <th>                     </th>      <td> </td>     \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
        "<tr>\n",
-       "    <td></td>       <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "    <td></td>       <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>var_R</th> <td>   -5.1557</td> <td>    0.011</td> <td> -473.043</td> <td> 0.000</td> <td>   -5.177</td> <td>   -5.134</td>\n",
+       "  <th>var_R</th> <td>   -5.1557</td> <td>    0.015</td> <td> -350.370</td> <td> 0.000</td> <td>   -5.184</td> <td>   -5.127</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>exp_R</th> <td>   -3.0179</td> <td>    0.007</td> <td> -439.733</td> <td> 0.000</td> <td>   -3.031</td> <td>   -3.004</td>\n",
+       "  <th>exp_R</th> <td>   -3.0179</td> <td>    0.008</td> <td> -367.431</td> <td> 0.000</td> <td>   -3.034</td> <td>   -3.002</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>const</th> <td>    3.5799</td> <td>    0.007</td> <td>  483.951</td> <td> 0.000</td> <td>    3.565</td> <td>    3.594</td>\n",
+       "  <th>const</th> <td>    3.5799</td> <td>    0.009</td> <td>  384.524</td> <td> 0.000</td> <td>    3.562</td> <td>    3.598</td>\n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -2481,19 +2481,19 @@
        "==============================================================================\n",
        "Dep. Variable:                grade_A   R-squared:                       0.254\n",
        "Model:                            OLS   Adj. R-squared:                  0.254\n",
-       "Method:                 Least Squares   F-statistic:                 1.307e+05\n",
+       "Method:                 Least Squares   F-statistic:                 7.263e+04\n",
        "Date:                Thu, 26 Apr 2018   Prob (F-statistic):               0.00\n",
-       "Time:                        18:39:03   Log-Likelihood:            -2.0937e+05\n",
+       "Time:                        22:02:13   Log-Likelihood:            -2.0937e+05\n",
        "No. Observations:              766669   AIC:                         4.187e+05\n",
        "Df Residuals:                  766666   BIC:                         4.188e+05\n",
        "Df Model:                           2                                         \n",
-       "Covariance Type:            nonrobust                                         \n",
+       "Covariance Type:                  HC0                                         \n",
        "==============================================================================\n",
-       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
        "------------------------------------------------------------------------------\n",
-       "var_R         -5.1557      0.011   -473.043      0.000      -5.177      -5.134\n",
-       "exp_R         -3.0179      0.007   -439.733      0.000      -3.031      -3.004\n",
-       "const          3.5799      0.007    483.951      0.000       3.565       3.594\n",
+       "var_R         -5.1557      0.015   -350.370      0.000      -5.184      -5.127\n",
+       "exp_R         -3.0179      0.008   -367.431      0.000      -3.034      -3.002\n",
+       "const          3.5799      0.009    384.524      0.000       3.562       3.598\n",
        "==============================================================================\n",
        "Omnibus:                   105957.527   Durbin-Watson:                   1.999\n",
        "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           157754.343\n",
@@ -2502,119 +2502,197 @@
        "==============================================================================\n",
        "\n",
        "Warnings:\n",
-       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[1] Standard Errors are heteroscedasticity robust (HC0)\n",
        "\"\"\""
       ]
      },
-     "execution_count": 577,
+     "execution_count": 612,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sm.OLS(grades[\"grade_A\"], risk_factors[[\"var_R\", \"exp_R\", \"const\"]]).fit().summary()"
+    "sm.OLS(grades[\"grade_A\"], risk_factors[[\"var_R\", \"exp_R\", \"const\"]]).fit(cov_type='HC0').summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logit = sm.Logit(grades[[\"grade_A\"]], risk_factors[[\"var_R\", \"exp_R\", \"const\"]])\n",
+    "logit.fit().summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Skewness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 619,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda/lib/python3.6/site-packages/statsmodels/discrete/discrete_model.py:1214: RuntimeWarning: overflow encountered in exp\n",
-      "  return 1/(1+np.exp(-X))\n",
-      "/anaconda/lib/python3.6/site-packages/statsmodels/discrete/discrete_model.py:1264: RuntimeWarning: divide by zero encountered in log\n",
-      "  return np.sum(np.log(self.cdf(q*np.dot(X,params))))\n"
+      "/anaconda/lib/python3.6/site-packages/statsmodels/base/model.py:1036: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  return self.params / self.bse\n",
+      "/anaconda/lib/python3.6/site-packages/scipy/stats/_distn_infrastructure.py:879: RuntimeWarning: invalid value encountered in greater\n",
+      "  return (self.a < x) & (x < self.b)\n",
+      "/anaconda/lib/python3.6/site-packages/scipy/stats/_distn_infrastructure.py:879: RuntimeWarning: invalid value encountered in less\n",
+      "  return (self.a < x) & (x < self.b)\n",
+      "/anaconda/lib/python3.6/site-packages/scipy/stats/_distn_infrastructure.py:1818: RuntimeWarning: invalid value encountered in less_equal\n",
+      "  cond2 = cond0 & (x <= self.a)\n",
+      "/anaconda/lib/python3.6/site-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"\n",
+      "/anaconda/lib/python3.6/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n",
+      "/anaconda/lib/python3.6/site-packages/pandas/core/computation/eval.py:290: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  target[parsed_expr.assigner] = ret\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimization terminated successfully.\n",
-      "         Current function value: inf\n",
-      "         Iterations 10\n"
-     ]
-    },
+    }
+   ],
+   "source": [
+    "linreg_rec_rate3 = sm.OLS(train_labels[train_labels.bad == 1][\"return\"] ** 3, \n",
+    "                         sm.add_constant(train_features[train_labels.bad == 1])).fit()\n",
+    "linreg_rec_rate3.summary()\n",
+    "\n",
+    "test_features[\"pred_rec_rate3\"] = linreg_rec_rate3.predict(test_features.iloc[:, :108])\n",
+    "\n",
+    "test_features[\"exp_R3\"] = ((1 + test_features[\"int_rate_num\"])**3 * (1 - test_features[\"pred_fail_rate\"]) +\n",
+    "                           test_features[\"pred_rec_rate3\"] * test_features[\"pred_fail_rate\"])\n",
+    "\n",
+    "test_features.eval(\"skew_R = (exp_R3 - 3 * exp_R * var_R - exp_R ** 3)\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 631,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
        "<table class=\"simpletable\">\n",
-       "<caption>Logit Regression Results</caption>\n",
+       "<caption>OLS Regression Results</caption>\n",
        "<tr>\n",
-       "  <th>Dep. Variable:</th>      <td>grade_A</td>     <th>  No. Observations:  </th>   <td>766669</td>   \n",
+       "  <th>Dep. Variable:</th>         <td>grade_A</td>     <th>  R-squared:         </th>  <td>   0.294</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Model:</th>               <td>Logit</td>      <th>  Df Residuals:      </th>   <td>766666</td>   \n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th>  <td>   0.294</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Method:</th>               <td>MLE</td>       <th>  Df Model:          </th>   <td>     2</td>   \n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>5.666e+04</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>          <td>Thu, 26 Apr 2018</td> <th>  Pseudo R-squ.:     </th>   <td>  -inf</td>   \n",
+       "  <th>Date:</th>             <td>Thu, 26 Apr 2018</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>              <td>17:10:50</td>     <th>  Log-Likelihood:    </th>  <td>    -inf</td>  \n",
+       "  <th>Time:</th>                 <td>22:20:49</td>     <th>  Log-Likelihood:    </th> <td>-1.8830e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td>-2.6991e+08</td>\n",
+       "  <th>No. Observations:</th>      <td>766669</td>      <th>  AIC:               </th>  <td>3.766e+05</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th> </th>                      <td> </td>        <th>  LLR p-value:       </th>   <td> 1.000</td>   \n",
+       "  <th>Df Residuals:</th>          <td>766665</td>      <th>  BIC:               </th>  <td>3.766e+05</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     3</td>      <th>                     </th>      <td> </td>     \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>         <td>HC0</td>       <th>                     </th>      <td> </td>     \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
        "<tr>\n",
-       "    <td></td>       <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "     <td></td>       <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>var_R</th> <td> -179.7219</td> <td>    0.543</td> <td> -331.046</td> <td> 0.000</td> <td> -180.786</td> <td> -178.658</td>\n",
+       "  <th>const</th>  <td>    4.6365</td> <td>    0.012</td> <td>  383.574</td> <td> 0.000</td> <td>    4.613</td> <td>    4.660</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>exp_R</th> <td>  -90.4078</td> <td>    0.277</td> <td> -326.615</td> <td> 0.000</td> <td>  -90.950</td> <td>  -89.865</td>\n",
+       "  <th>exp_R</th>  <td>   -4.0665</td> <td>    0.011</td> <td> -367.664</td> <td> 0.000</td> <td>   -4.088</td> <td>   -4.045</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>const</th> <td>   98.4416</td> <td>    0.300</td> <td>  327.697</td> <td> 0.000</td> <td>   97.853</td> <td>   99.030</td>\n",
+       "  <th>var_R</th>  <td>   -9.9732</td> <td>    0.039</td> <td> -257.781</td> <td> 0.000</td> <td>  -10.049</td> <td>   -9.897</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>skew_R</th> <td>   -9.6710</td> <td>    0.062</td> <td> -155.289</td> <td> 0.000</td> <td>   -9.793</td> <td>   -9.549</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>94872.699</td> <th>  Durbin-Watson:     </th>  <td>   2.000</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th>  <td> 0.000</td>   <th>  Jarque-Bera (JB):  </th> <td>135018.000</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>           <td> 1.026</td>   <th>  Prob(JB):          </th>  <td>    0.00</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>       <td> 2.862</td>   <th>  Cond. No.          </th>  <td>    211.</td> \n",
        "</tr>\n",
        "</table>"
       ],
       "text/plain": [
        "<class 'statsmodels.iolib.summary.Summary'>\n",
        "\"\"\"\n",
-       "                           Logit Regression Results                           \n",
+       "                            OLS Regression Results                            \n",
        "==============================================================================\n",
-       "Dep. Variable:                grade_A   No. Observations:               766669\n",
-       "Model:                          Logit   Df Residuals:                   766666\n",
-       "Method:                           MLE   Df Model:                            2\n",
-       "Date:                Thu, 26 Apr 2018   Pseudo R-squ.:                    -inf\n",
-       "Time:                        17:10:50   Log-Likelihood:                   -inf\n",
-       "converged:                       True   LL-Null:                   -2.6991e+08\n",
-       "                                        LLR p-value:                     1.000\n",
+       "Dep. Variable:                grade_A   R-squared:                       0.294\n",
+       "Model:                            OLS   Adj. R-squared:                  0.294\n",
+       "Method:                 Least Squares   F-statistic:                 5.666e+04\n",
+       "Date:                Thu, 26 Apr 2018   Prob (F-statistic):               0.00\n",
+       "Time:                        22:20:49   Log-Likelihood:            -1.8830e+05\n",
+       "No. Observations:              766669   AIC:                         3.766e+05\n",
+       "Df Residuals:                  766665   BIC:                         3.766e+05\n",
+       "Df Model:                           3                                         \n",
+       "Covariance Type:                  HC0                                         \n",
        "==============================================================================\n",
        "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
        "------------------------------------------------------------------------------\n",
-       "var_R       -179.7219      0.543   -331.046      0.000    -180.786    -178.658\n",
-       "exp_R        -90.4078      0.277   -326.615      0.000     -90.950     -89.865\n",
-       "const         98.4416      0.300    327.697      0.000      97.853      99.030\n",
+       "const          4.6365      0.012    383.574      0.000       4.613       4.660\n",
+       "exp_R         -4.0665      0.011   -367.664      0.000      -4.088      -4.045\n",
+       "var_R         -9.9732      0.039   -257.781      0.000     -10.049      -9.897\n",
+       "skew_R        -9.6710      0.062   -155.289      0.000      -9.793      -9.549\n",
+       "==============================================================================\n",
+       "Omnibus:                    94872.699   Durbin-Watson:                   2.000\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           135018.000\n",
+       "Skew:                           1.026   Prob(JB):                         0.00\n",
+       "Kurtosis:                       2.862   Cond. No.                         211.\n",
        "==============================================================================\n",
        "\n",
-       "Possibly complete quasi-separation: A fraction 0.25 of observations can be\n",
-       "perfectly predicted. This might indicate that there is complete\n",
-       "quasi-separation. In this case some parameters will not be identified.\n",
+       "Warnings:\n",
+       "[1] Standard Errors are heteroscedasticity robust (HC0)\n",
        "\"\"\""
       ]
      },
-     "execution_count": 548,
+     "execution_count": 631,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "logit = sm.Logit(grades[[\"grade_A\"]], risk_factors[[\"var_R\", \"exp_R\", \"const\"]])\n",
-    "logit.fit().summary()"
+    "sm.OLS(grades[\"grade_A\"], sm.add_constant(test_features[[\"exp_R\", \"var_R\", \"skew_R\"]])).fit(cov_type='HC0').summary()"
    ]
   },
   {
